- interface fixes - avoi link over whitespace on most used

--- a/src/components/HeroDetailsCard/components/VerifiedBadge/verifiedBadge.styles.scss
+++ b/src/components/HeroDetailsCard/components/VerifiedBadge/verifiedBadge.styles.scss
@@ -1,6 +1,9 @@
 .verified-badge-wrapper {
-  display: inline-block;
-  vertical-align: middle;
+  display: inline-flex;
+  @include media-breakpoint-up(md) {
+    display: inline-block;
+    vertical-align: middle;
+  }
   .verified-badge {
     display: flex;
     align-items: center;
